lab3/k8s/api_service/deployment.config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: some-api-deploy
spec:
  selector:
    matchLabels:
      app: some-api-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: some-api-deployment
    spec:
      containers:
      - name: some-api-deployment
        image: la7rodectus/api
        ports:
        - containerPort: 8080
