lab3/k8s/api_service/circuitBreaker.config.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: some-api-destination
spec:
  host: some-api-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5 
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 80
