lab3/k8s/api_service/istio.config.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: some-api-service-virtual
spec:
  hosts:
    - some-api-service # ім'я Service до якого застосовується налаштування
  http:
    - route:
        - destination:
            host: some-api-service # ім'я Service до якого застосовується налаштування
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
